# comfyui-sound-lab

./: .gitignore  README.md  __init__.py  install.bat  pyproject.toml  requirements.txt
ffmpy-0.3.2/: setup.cfg  setup.py
ffmpy-0.3.2/ffmpy.egg-info/: PKG-INFO  SOURCES.txt
nodes/: StableAudioNode.py  musicNode.py  utils.py
nodes/stable_audio_tools/models/: conditioners.py
web/javascript/: sound-lab.js
